_js/react-portfolio/src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-footer {
  background-color: #222;
  height: 150px;
  padding: 20px;
  color: white;
}

.App-footer a {
  color: white;
  text-decoration: none;
}

.App-footer a:visited {
  color: white;
}

.App-intro {
  font-size: large;
}

.tag-cloud {
  font-size: .8em;
  padding: 0;
}

.tag-cloud h2 {
  font-size: 1.3em;
}

.tag-cloud li {
  display: inline-block;
  padding: 5px 10px;
  margin: 0 5px 10px;
  background: darkorange;
  color: white;
  cursor: pointer;
  text-transform: uppercase;
  letter-spacing: .1em;
}

.portfolio-list {
  list-style-type: none;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  font-size: .85em;
}

.portfolio-list a {
  position: relative;
  display: inline-block;
  width: 98%;
  padding: 20px 1%;
  background: white;
  background-size: cover;
  background-position: 50%;
  border-bottom: 10px solid black;
  box-shadow: 0 10px 6px -6px #777;
  text-decoration: none;
  color: #000;
}

.portfolio-list a h1 {
  margin: 10px auto;
  width: 80%;
}

.project-backdrop {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  background: #fff;
}

.project-backdrop {
  bottom: 0;
  opacity: 0;
  height: 100%;
}

.project-backdrop:hover {
  opacity: .85;
}

.project-image {
  background-size: contain;
  background-position: 50% 0;
  background-repeat: no-repeat;
  height: 200px;
}

.project-image.small {
  background-size: contain;
  background-repeat: no-repeat;
}

.project-details {
  padding: 1%;
  background: white;
  position: relative;
}

.project-details .tags {
  display: inline-block;
  padding: 3px 7px;
  margin: 0;
  background: #ffa726;
  color: white;
  font-size: .85em;
  letter-spacing: .1em;
}

.project-details h3 {
  margin: 10px 0 8px;
}

.portfolio-details-wrapper {
  background: #fff;
  padding: 40px 0;
  min-height: 110vh;
}
.portfolio-details {
  background: #fff;
  max-width: 80%;
  margin: 0 auto;
  padding: 40px;
}

.portfolio-details img {
  max-width: 100%;
  border: 1px solid #000;
}

.portfolio-details-text {
  max-width: 40em;
  margin: 0 auto;
  text-align: left;
}

.switch-wrapper {
  display: grid;
  grid-template-areas: "PageTransition";
}

.switch-wrapper > div {
  grid-area: PageTransition;
}

@media only screen and (min-width: 40em) {
  .project-image {
    background-size: cover;
    height: 400px;
  }
}

@media only screen and (min-width: 60em) {
  .portfolio-list a {
    width: 45.5%;
    margin: 2%;
    padding: 0;
    border: 1px solid #666;
  }

  .project-image {
    height: 300px;
  }
}

@media only screen and (min-width: 80em) {
  .portfolio-list a {
    width: 29%;
    margin: 2%;
    padding: 0;
    border: 1px solid #666;
  }

  .project-image {
    height: 250px;
  }
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

